# dorado-sensitivity

./: .gitignore  CHANGES.md  LICENSE.rst  LICENSE.txt  README.md  example.ipynb  pyproject.toml
.github/workflows/: build-and-test.yml  python-publish.yml
dorado/sensitivity/: __init__.py  backgrounds.py  bandpasses.py  constants.py  core.py  math.py
dorado/sensitivity/data/: D1_effective_area.ecsv  D2_effective_area.ecsv  __init__.py  d1_effective_area.ecsv  nuv_d_baseline_effective_area.ecsv  nuv_d_cbe_effective_area.ecsv  nuv_d_threshold_effective_area.ecsv
dorado/sensitivity/tests/: test_sensitivity.py
