[tool.poetry]
name = "dorado-sensitivity"
version = "0.1.0"
description = "Dorado sensitivity and exposure time calculator"
authors = ["Brad Cenko <brad.cenko@nasa.gov>", "Leo Singer <leo.singer@ligo.org>"]
license = "NOSA"
homepage = "https://github.com/dorado-science/dorado-sensitivity"
repository = "https://github.com/dorado-science/dorado-sensitivity"
packages = [{include = "dorado"}]
include = ["dorado/sensitivity/data/*.ecsv", "dorado/sensitivity/data/*.txt"]

[tool.poetry.dependencies]
python = "^3.7"
pyyaml = "*"  # For reading and writing ECSV files
synphot = "*"

[tool.poetry.dev-dependencies]
flake8 = "*"
hypothesis = "*"
ipykernel = "*"
matplotlib = "*"
pytest = "*"

[tool.poetry.scripts]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/dorado-science/dorado-sensitivity/issues"
"Change Log" = "https://github.com/dorado-science/dorado-sensitivity/blob/master/CHANGES.md"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
