[tool.poetry]
name = "dorado-sensitivity"
version = "0.3.0"
description = "Dorado sensitivity and exposure time calculator"
authors = ["Brad Cenko <brad.cenko@nasa.gov>", "Leo Singer <leo.singer@ligo.org>"]
license = "NOSA"
homepage = "https://github.com/nasa/dorado-sensitivity"
repository = "https://github.com/nasa/dorado-sensitivity"
readme = "README.md"
packages = [{include = "dorado"}]
include = ["dorado/sensitivity/data/*.ecsv", "dorado/sensitivity/data/*.txt"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Scientific/Engineering :: Astronomy"]

[tool.poetry.dependencies]
python = "^3.7"
pyyaml = "*"  # For reading and writing ECSV files
synphot = "*"

[tool.poetry.dev-dependencies]
flake8 = "*"
hypothesis = "*"
ipykernel = "*"
matplotlib = "*"
pytest = "*"

[tool.poetry.scripts]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/nasa/dorado-sensitivity/issues"
"Change Log" = "https://github.com/nasa/dorado-sensitivity/blob/master/CHANGES.md"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
