[tool.poetry]
name = "dorado-sensitivity"
version = "0.4.0"
description = "Dorado sensitivity and exposure time calculator"
authors = ["Brad Cenko <brad.cenko@nasa.gov>", "Leo Singer <leo.singer@ligo.org>"]
license = "NOSA"
homepage = "https://github.com/nasa/dorado-sensitivity"
repository = "https://github.com/nasa/dorado-sensitivity"
readme = "README.md"
packages = [{include = "dorado"}]
include = ["dorado/sensitivity/data/*.ecsv", "dorado/sensitivity/data/*.txt"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Astronomy"]

[tool.poetry.dependencies]
dustmaps = ">=1.0.8"  # GNILC was added in this version
dust_extinction = ">=0.8"  # F19 was added in this version
python = "^3.9"
pyyaml = "*"  # For reading and writing ECSV files
scipy = "*"
synphot = "*"

[tool.poetry.dev-dependencies]
flake8 = "*"
hypothesis = "*"
ipykernel = "*"
matplotlib = "*"
pytest = ">=7.2.0"

[tool.poetry.scripts]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/nasa/dorado-sensitivity/issues"
"Change Log" = "https://github.com/nasa/dorado-sensitivity/blob/master/CHANGES.md"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
